# Simple-RAG

./: .gitignore  Dockerfile  agent.py  api.py  config.py  database.py  docker-compose.yml  ingestion.py  main.py  p_agent.py  p_api.py  p_database.py  p_ingestion.py  p_main.py  pyproject.toml  requirements.txt  schemas.py  utils.py
app/config/: config.py
app/core/: agent.py  api.py
app/database_setup/: mongodb_setup.py  qdrant_setup.py
app/schemas/: response.py
app/utils/: text_processing.py
